Update parallel-tests.rst